Always display remove button (fix on mobile)

--- a/django_attach/static/django_attach/css/attachment_inline.css
+++ b/django_attach/static/django_attach/css/attachment_inline.css
@@ -7,12 +7,8 @@
     height: 10px;
     background: url(../../admin/img/icon-deletelink.svg) no-repeat center center;
     vertical-align: middle;
-    display: none;
-    cursor: pointer;
-}
-
-.attachment-inline .attachment:hover .delete {
     display: inline-block;
+    cursor: pointer;
     margin-left: 0.3em;
 }
 
